# OpenQuota

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  verify-command-contract.js  verify-model-contract.js  verify-platform-smoke.js  verify-provider-registry-contract.js  verify-single-instance-contract.js  verify-versions.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: pricing_supplement.json
src-tauri/src/: child_process.rs  desktop_integration.rs  lib.rs  logging.rs  main.rs  menu_bar.rs  models.rs  notifications.rs  pacing.rs  policy.rs  popup.rs  refresh_loop.rs  service.rs  settings.rs  storage.rs  tray_icon.rs  tray_presentation.rs  updates.rs  window.rs  xdg_autostart.rs
src-tauri/src/commands/: bootstrap.rs  mod.rs  provider.rs  settings.rs  usage.rs  window.rs
src-tauri/src/pricing/: catalog.rs  codecs.rs  mod.rs  model_pricing.rs  rates.rs  store.rs  supplement.rs
src-tauri/src/providers/: api_key.rs  credential_store.rs  daily_usage.rs  detection.rs  log_usage.rs  mod.rs  pi_usage.rs  registry.rs  test_http.rs
src-tauri/src/providers/antigravity/: auth.rs  client.rs  discovery.rs  mapper.rs  mod.rs
src-tauri/src/providers/claude/: auth.rs  client.rs  local_usage.rs  mapper.rs  mod.rs
src-tauri/src/providers/codex/: auth.rs  client.rs  local_usage.rs  mapper.rs  mod.rs  pricing.rs  reset_claim.rs
src-tauri/src/providers/copilot/: auth.rs  client.rs  mapper.rs  mod.rs
src-tauri/src/providers/cursor/: auth.rs  client.rs  csv.rs  mapper.rs  mod.rs
src-tauri/src/providers/devin/: auth.rs  auth_tests.rs  client.rs  mapper.rs  mod.rs  tests.rs
src-tauri/tests/fixtures/: codex_session.jsonl  codex_usage.json
(+139 files in other folders)
